# cmake-templates

./: .gitignore  README.md
basic_program_template/: CMakeLists.txt  main.cpp
git_basic_commands/: git_basic_commnads.md
lib_src_template/: CMakeLists.txt  main.cpp
lib_src_template/include/: my_library.h
lib_src_template/src/: my_library.cpp
